--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
     <div id=card>
         <img class="hero" src="images/illustration-hero.svg" alt="A person listening to music from a smartphone">
-    </div>
-    
+        <h1>Order Summary</h1>
+        <p>You can now listen to million of songs, audiobooks and podcasts on any device anywhere you like!</p>
+        <div id="plan">
+            <img src="images/icon-music.svg" alt="Semiquaver icon">
+            <h2>Annual Plan</h2>
+            <p>$59.99/year</p>
+            <a href="#change">Change</a>
+        </div>
+        <button id="payment">Proceed to Payment</button>
+        <button id="cancel">Cancel Order</button>
+    </div>   
 </body>
 </html>
