--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
     <title>Order Summary</title>
 </head>
 <body>
-    <div id=card>
+    <div class="container" id="card">
         <img class="hero" src="images/illustration-hero.svg" alt="A person listening to music from a smartphone">
         <h1 class=title>Order Summary</h1>
-        <p>You can now listen to million of songs, audiobooks and podcasts on any device anywhere you like!</p>
-        <div id="plan">
+        <p>You can now listen to million of songs, 
+            <br> audiobooks and podcasts on any device 
+            <br> anywhere you like!</p>
+        <div class="container" id="plan">
             <img src="images/icon-music.svg" alt="Semiquaver icon">
             <h2>Annual Plan</h2>
             <p>$59.99/year</p>
             <a href="#change">Change</a>
         </div>
-        <button id="payment">Proceed to Payment</button>
-        <button id="cancel">Cancel Order</button>
+        <div id="button">
+            <button id="payment">Proceed to Payment</button>
+            <button id="cancel">Cancel Order</button>
+        </div>
+
     </div>   
 </body>
 </html>
