--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <br> audiobooks and podcasts on any device 
             <br> anywhere you like!</p>
         <div class="container" id="plan">
-            <img src="images/icon-music.svg" alt="Semiquaver icon">
-            <h2>Annual Plan</h2>
+            <img src="images/icon-music.svg" alt="Semiquaver icon" id="icon">
+            <h3>Annual Plan</h3>
             <p>$59.99/year</p>
             <a href="#change">Change</a>
         </div>
